--- a/app/src/main/res/layout/coluna.xml
+++ b/app/src/main/res/layout/coluna.xml
@@ -1,51 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="180dp"
+
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="10dp"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="6dp">
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="tournament_coluna"
+            type="com.mobile.pytournaments.domain.Tournament" />
+    </data>
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-        <ImageView
-            android:id="@+id/imagem"
-            android:layout_width="match_parent"
-            android:layout_height="102dp"
-            android:background="@color/red"/>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:layout_margin="10dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="6dp">
 
-        <TextView
-            android:id="@+id/titulo"
-            android:layout_centerHorizontal="true"
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/imagem"
-            android:layout_marginTop="0dp"
-            android:text="Título do campeonato"
-            android:textSize="15sp" />
+            android:layout_height="wrap_content" >
+            <ImageView
+                android:id="@+id/imagem"
+                android:layout_width="match_parent"
+                android:layout_height="102dp"
+                android:background="@color/red"/>
 
-        <TextView
-            android:id="@+id/descricaoJogo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/titulo"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
-            android:text="Título do campeonato"
-            android:textSize="10sp" />
+            <TextView
+                android:id="@+id/titulo"
+                android:layout_centerHorizontal="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imagem"
+                android:layout_marginTop="0dp"
+                android:text="@{tournament_coluna.name}"
+                android:textSize="15sp" />
 
-        <TextView
-            android:id="@+id/descricaoData"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/descricaoJogo"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
-            android:text="15/12/2021"
-            android:textSize="10sp" />
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/descricaoJogo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/titulo"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:text="@{tournament_coluna.description}"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/descricaoData"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/descricaoJogo"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:text="@{tournament_coluna.date.toString()}"
+                android:textSize="20sp" />
+        </RelativeLayout>
 
 
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+</layout>
