--- a/app/src/main/res/layout/linha.xml
+++ b/app/src/main/res/layout/linha.xml
@@ -1,59 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="300dp"
-    android:layout_height="200dp"
-    android:layout_centerInParent="true"
-    android:layout_marginTop="20dp"
-    android:layout_marginStart="45dp"
-    android:clickable="true"
-    android:focusable="true"
-    android:checkable="true"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="6dp">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-        <ImageView
-            android:id="@+id/imagem"
-            android:layout_width="match_parent"
-            android:layout_height="102dp"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
+<layout>
+    <data>
+        <variable
+            name="tournament_linha"
+            type="com.mobile.pytournaments.domain.Tournament" />
+    </data>
 
-        <TextView
-            android:id="@+id/titulo"
-            android:layout_centerHorizontal="true"
+    <androidx.cardview.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="45dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:checkable="true"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="6dp">
+
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/imagem"
-            android:layout_marginTop="0dp"
-            android:text="Título do campeonato"
-            android:textSize="25sp" />
+            android:layout_height="wrap_content" >
+            <ImageView
+                android:id="@+id/imagem"
+                android:layout_width="match_parent"
+                android:layout_height="102dp"
+                tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
-        <TextView
-            android:id="@+id/descricaoJogo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/titulo"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
-            android:text="Título do campeonato"
-            android:textSize="15sp" />
+            <TextView
+                android:id="@+id/titulo"
+                android:layout_centerHorizontal="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imagem"
+                android:layout_marginTop="0dp"
+                android:text="@{tournament_linha.name}"
+                android:textSize="25sp" />
 
-        <TextView
-            android:id="@+id/descricaoData"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/descricaoJogo"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
-            android:text="15/12/2021"
-            android:textSize="10sp" />
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/descricaoJogo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/titulo"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:text="@{tournament_linha.description}"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/descricaoData"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/descricaoJogo"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:text="@{tournament_linha.date.toString()}"
+                android:textSize="12sp" />
+        </RelativeLayout>
 
 
 
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+</layout>
