--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -91,7 +91,7 @@
                     android:textSize="15sp" />
 
                 <TextView
-                    android:id="@+id/data"
+                    android:id="@+id/TournamentDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/descricaoJogo"
@@ -113,7 +113,9 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            android:clickable="true"
+            android:focusable="true"/>
 
         <TextView
             android:id="@+id/textView"
