--- a/app/src/main/res/layout/linha.xml
+++ b/app/src/main/res/layout/linha.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
             name="tournament_linha"
@@ -8,9 +10,6 @@
     </data>
 
     <androidx.cardview.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="300dp"
         android:layout_height="200dp"
         android:layout_centerInParent="true"
@@ -24,7 +23,8 @@
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="match_parent">
+
             <ImageView
                 android:id="@+id/imagem"
                 android:layout_width="match_parent"
@@ -33,10 +33,10 @@
 
             <TextView
                 android:id="@+id/titulo"
-                android:layout_centerHorizontal="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/imagem"
+                android:layout_centerHorizontal="true"
                 android:layout_marginTop="0dp"
                 android:text="@{tournament_linha.name}"
                 android:textSize="25sp" />
