--- a/app/src/main/res/layout/coluna.xml
+++ b/app/src/main/res/layout/coluna.xml
@@ -8,6 +8,9 @@
         <variable
             name="tournament_coluna"
             type="com.mobile.pytournaments.domain.Tournament" />
+        <variable
+            name="main_fragment"
+            type="com.mobile.pytournaments.ui.fragment.main.MainFragment" />
 
     </data>
 
@@ -24,7 +27,10 @@
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:onClick="@{main_fragment::goToTournamentScreen}"
+            android:focusable="true">
             <ImageView
                 android:id="@+id/imagem"
                 android:layout_width="match_parent"
