--- a/app/src/main/res/layout/fragment_localization_tournaments.xml
+++ b/app/src/main/res/layout/fragment_localization_tournaments.xml
@@ -20,7 +20,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@{tournament.participants.toString()}"
+            android:text="@{tournament.location.toString()}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
