--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -52,6 +52,7 @@
             android:layout_marginBottom="20dp"
             android:clickable="true"
             android:focusable="true"
+            android:onClick="@{main_fragment::goToTournamentScreen}"
             android:foreground="?android:attr/selectableItemBackground"
             app:layout_constraintBottom_toTopOf="@+id/guideline4"
             app:layout_constraintEnd_toEndOf="parent"
