Consertado o binding e Login de acordo com o MVVMi

--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -6,7 +6,13 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <variable
+            name="forgot"
+            type="com.mobile.pytournaments.ui.fragment.login.ForgotPasswordFragment" />
 
+        <variable
+            name="viewmodel"
+            type="com.mobile.pytournaments.viewmodel.LoginViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -46,6 +52,7 @@
             android:layout_marginEnd="64dp"
             android:ems="10"
             android:hint="@string/forgot_fragment_email"
+            android:text="@={viewmodel.email}"
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -61,6 +68,7 @@
             android:layout_marginEnd="64dp"
             android:layout_marginBottom="16dp"
             android:text="@string/forgot_fragment_send"
+            android:onClick="@{forgot::forgotPassword}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
