--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,4 +5,5 @@
 
     <attr format="reference" name="titleStyle"/>
     <attr format="reference" name="secondaryTitleStyle"/>
+    <attr format="reference" name="infoText"/>
 </resources>
