--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -9,11 +9,11 @@
         <variable
             name="codigoDoFragmento"
             type="com.mobile.pytournaments.ui.fragment.login.LoginFragment" />
-
+        <variable
+            name="viewmodel"
+            type="com.mobile.pytournaments.viewmodel.LoginViewModel" />
 
     </data>
-
-
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clLoginFragment"
@@ -49,6 +49,7 @@
             android:layout_marginEnd="64dp"
             android:ems="10"
             android:hint="@string/login_fragment_email"
+            android:text="@={viewmodel.email}"
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
@@ -64,6 +65,7 @@
             android:layout_marginEnd="64dp"
             android:ems="10"
             android:hint="@string/login_fragment_password"
+            android:text="@={viewmodel.password}"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -71,15 +73,14 @@
 
         <Button
             android:id="@+id/btLoginLogon"
-
             style="?secondaryButtonStyle"
-
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="128dp"
             android:layout_marginEnd="128dp"
             android:layout_marginBottom="16dp"
             android:text="@string/login_fragment_logon"
+            android:onClick="@{codigoDoFragmento::login}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
