--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -1,83 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="?backgroundColor"
-    tools:context=".ui.fragment.screen.onboardingFragment">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- TODO: Update blank fragment layout -->
+    <data>
+        <variable
+            name="onboarding"
+            type="com.mobile.pytournaments.ui.fragment.onboarding.OnboardingFragment" />
+    </data>
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/onboardingviewPager"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/frameLayout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@drawable/view_pager_background"
-        app:layout_constraintBottom_toBottomOf="@id/viewCenterOfNext"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:background="?backgroundColor"
+        tools:context=".ui.fragment..onboardingFragment">
 
-    <LinearLayout
-        android:id="@+id/indicatorsContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <!-- TODO: Update blank fragment layout -->
 
-    <TextView
-        android:id="@+id/textSkip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
-        android:text="@string/skip"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/onboardingviewPager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@drawable/view_pager_background"
+            app:layout_constraintBottom_toBottomOf="@id/viewCenterOfNext"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btComecar"
-        style="?secondaryButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="64dp"
-        android:text="@string/comecar"
-        app:cornerRadius="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <LinearLayout
+            android:id="@+id/indicatorsContainer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageNext"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_marginBottom="52dp"
-        android:background="@drawable/icon_background"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/ic_right"
-        app:layout_constraintBottom_toTopOf="@+id/btComecar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:tint="@color/white" />
+        <Button
+            android:id="@+id/btComecar"
+            style="?secondaryButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="64dp"
+            android:text="@string/comecar"
+            android:onClick="@{onboarding::goToLoginFragment}"
+            app:cornerRadius="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <View
-        android:id="@+id/viewCenterOfNext"
-        android:layout_width="1dp"
-        android:layout_height="1dp"
-        app:layout_constraintBottom_toBottomOf="@id/imageNext"
-        app:layout_constraintEnd_toEndOf="@id/imageNext"
-        app:layout_constraintStart_toEndOf="@id/imageNext"
-        app:layout_constraintStart_toStartOf="@id/imageNext" />
+        <ImageView
+            android:id="@+id/imageNext"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginBottom="52dp"
+            android:background="@drawable/icon_background"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/ic_right"
+            app:layout_constraintBottom_toTopOf="@+id/btComecar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:tint="@color/white" />
+
+        <View
+            android:id="@+id/viewCenterOfNext"
+            android:layout_width="1dp"
+            android:layout_height="1dp"
+            app:layout_constraintBottom_toBottomOf="@id/imageNext"
+            app:layout_constraintEnd_toEndOf="@id/imageNext"
+            app:layout_constraintStart_toEndOf="@id/imageNext"
+            app:layout_constraintStart_toStartOf="@id/imageNext" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
