--- a/app/src/main/res/layout/fragment_onboarding_third_screen.xml
+++ b/app/src/main/res/layout/fragment_onboarding_third_screen.xml
@@ -5,39 +5,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/splashScreenLayout"
+        android:id="@+id/onboardingThirdScreen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?backgroundColor"
-        tools:context=".ui.fragment.onboarding.SplashScreenFragment">
+        tools:context=".ui.fragment.onboarding.screen.OnboardingThirdScreenFragment">
+
 
         <ImageView
-            android:id="@+id/ivSplashScreenLogo"
+            android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/py_tournament_logo"
+            android:src="@drawable/terceira_tela_splashscreen"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView3"
-            style="?secondaryTitleStyle"
+            android:id="@+id/textView4"
+            style="?infoText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/app_name"
+            android:layout_marginTop="32dp"
+            android:text="@string/splash_screen_third_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ivSplashScreenLogo" />
-
+            app:layout_constraintTop_toTopOf="@+id/imageView2" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
