--- a/app/src/main/res/values/type.xml
+++ b/app/src/main/res/values/type.xml
@@ -27,4 +27,13 @@
         <item name="android:textSize">24sp</item>
         <item name="android:textAllCaps">false</item>
     </style>
+
+    <style name="Base.TextAppearance.AppCompat.InfoText">
+        <item name="android:textStyle">normal</item>
+        <item name="fontFamily">@font/manrope</item>
+        <item name="android:fontFamily">@font/manrope</item>
+        <item name="android:letterSpacing">0.01</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 </resources>
