alteração das cardsviews

--- a/app/src/main/res/layout/fragment_profile_main_user.xml
+++ b/app/src/main/res/layout/fragment_profile_main_user.xml
@@ -12,7 +12,7 @@
             type="com.mobile.pytournaments.ui.fragment.main.profile.ProfileMainUserFragment" />
         <variable
             name="user"
-            type="com.mobile.pytournaments.domain.User" />
+            type="com.mobile.pytournaments.domain.UserModelo" />
 
     </data>
 
@@ -112,6 +112,7 @@
                 android:layout_marginTop="28dp"
                 android:layout_marginEnd="50dp"
                 android:text="Conta"
+                android:onClick="@{redirecionar::redirecionarConta}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -124,7 +125,7 @@
                 android:layout_marginStart="50dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="50dp"
-                android:onClick="@{redirecionar::redirecionarAmigos}"
+                android:onClick="@{redirecionar::redirecionarListaAmigos}"
                 android:text="Amigos"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
