--- a/app/src/main/res/layout/fragment_main_tournaments.xml
+++ b/app/src/main/res/layout/fragment_main_tournaments.xml
@@ -30,7 +30,8 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.764" />
+            app:layout_constraintVertical_bias="0.764"
+            tools:listitem="layout"/>
 
         <TextView
             android:id="@+id/tvTitlePrincipal"
