--- a/app/src/main/res/layout/coluna.xml
+++ b/app/src/main/res/layout/coluna.xml
@@ -14,38 +14,32 @@
 
     </data>
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:layout_margin="10dp"
-        android:clickable="true"
-        android:focusable="true"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="6dp"
-
-        >
-
+<androidx.cardview.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="180dp"
+    android:layout_margin="10dp"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="6dp"
+    >
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:onClick="@{main_fragment::goToTournamentScreen}"
-            android:focusable="true">
-            <ImageView
-                android:id="@+id/imagem"
-                android:layout_width="match_parent"
-                android:layout_height="102dp"
-                android:background="@color/red"/>
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/titulo"
-                android:layout_centerHorizontal="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/imagem"
-                android:layout_marginTop="0dp"
-                android:text="@{tournament_coluna.name}"
-                android:textSize="15sp" />
+        <ImageView
+            android:id="@+id/imagem"
+            android:layout_width="match_parent"
+            android:layout_height="102dp"
+            android:background="@color/red" />
+
+        <TextView
+            android:id="@+id/titulo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/imagem"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="0dp"
+            android:text="@{tournament_coluna.name}"
+            android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/descricaoJogo"
@@ -64,10 +58,11 @@
                 android:layout_below="@id/descricaoJogo"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="5dp"
-                android:text="@{tournament_coluna.date.toString()}"
+                android:text="@{tournament_coluna.getStringDate()}"
+                android:textAlignment="center"
                 android:textSize="15sp" />
+
+
         </RelativeLayout>
-
-
-    </androidx.cardview.widget.CardView>
+</androidx.cardview.widget.CardView>
 </layout>
