Adicionado a activityViewModel para transferência de dados entre fragmentos

--- a/app/src/main/res/layout/coluna.xml
+++ b/app/src/main/res/layout/coluna.xml
@@ -49,6 +49,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="5dp"
                 android:text="@{tournament_coluna.description}"
+                android:maxLength="25"
                 android:textSize="15sp" />
 
             <TextView
