--- a/app/src/main/res/layout/fragment_general_information.xml
+++ b/app/src/main/res/layout/fragment_general_information.xml
@@ -7,6 +7,9 @@
         <variable
             name="tournament"
             type="com.mobile.pytournaments.domain.Tournament" />
+        <variable
+            name="general_information"
+            type="com.mobile.pytournaments.ui.fragment.main.tournaments.fragmentsTournament.GeneralInformationFragment" />
     </data>
 
 
