--- a/app/src/main/res/layout/fragment_tournaments_description.xml
+++ b/app/src/main/res/layout/fragment_tournaments_description.xml
@@ -60,6 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:text="@{tournament.name}"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/TournamentFragmentTitle" />
