requisição loguin, criação lista amigos

--- a/app/src/main/res/layout/fragment_profile_main_user.xml
+++ b/app/src/main/res/layout/fragment_profile_main_user.xml
@@ -12,7 +12,7 @@
             type="com.mobile.pytournaments.ui.fragment.main.profile.ProfileMainUserFragment" />
         <variable
             name="user"
-            type="com.mobile.pytournaments.domain.UserModelo" />
+            type="com.mobile.pytournaments.domain.UserCadastraApi" />
 
     </data>
 
