--- a/app/src/main/res/layout/friendlist.xml
+++ b/app/src/main/res/layout/friendlist.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="UserData"
-            type="com.mobile.pytournaments.domain.UserModelo" />
+            type="com.mobile.pytournaments.domain.UserCadastraApi" />
 
         <variable
             name="redirecionar"
